--- a/example/index.html
+++ b/example/index.html
@@ -3,13 +3,13 @@
 <head lang="en">
   <meta charset="UTF-8">
   <title></title>
-  <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
   <script src="https://cdn.firebase.com/js/client/1.0.21/firebase.js"></script>
   <script src="https://github.com/js-data/js-data/releases/download/0.0.1/js-data-0.0.1.min.js"></script>
-  <!--<script-->
-    <!--src="https://github.com/js-data/js-data-firebase/releases/download/0.1.0/js-data-firebase-0.1.0.min.js"></script>-->
-  <script src="example.js"></script>
+  <script
+    src="https://github.com/js-data/js-data-firebase/releases/download/0.1.0/js-data-firebase-0.1.0.min.js"></script>
+  <script src="./example.js"></script>
 </head>
 <body data-ng-controller="firebaseCtrl as fCtrl">
 <div class="container">
