--- a/example/index.html
+++ b/example/index.html
@@ -6,9 +6,9 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
   <script src="https://cdn.firebase.com/js/client/1.0.21/firebase.js"></script>
-  <script src="https://github.com/js-data/js-data/releases/download/0.4.0/js-data-0.4.0.min.js"></script>
+  <script src="https://github.com/js-data/js-data/releases/download/0.4.1/js-data-0.4.1.min.js"></script>
   <script
-    src="https://github.com/js-data/js-data-firebase/releases/download/0.4.1/js-data-firebase-0.4.1.min.js"></script>
+    src="https://github.com/js-data/js-data-firebase/releases/download/0.4.2/js-data-firebase-0.4.2.min.js"></script>
   <script src="./example.js"></script>
 </head>
 <body data-ng-controller="firebaseCtrl as fCtrl">
@@ -43,18 +43,22 @@
   </div>
   <div>
 <pre><code>
-var adapter = new DSFirebaseAdapter({
-  basePath: 'https://js-data-firebase.firebaseio.com'
-});
-
-var store = new JSData.DS();
-store.registerAdapter('firebase', adapter, { default: true });
-
-var User = store.defineResource('user');
-
 angular.module('firebase-example', [])
-  .controller('firebaseCtrl', function ($scope, $timeout) {
+  .factory('store', function () {
+    var store = new JSData.DS();
+    store.registerAdapter('http', new DSHttpAdapter({
+      basePath: 'https://js-data-firebase.firebaseio.com'
+    }, { default: true });
+    return store;
+  })
+  .factory('User', function (store) {
+    return store.defineResource('user');
+  })
+  .controller('firebaseCtrl', function ($scope, $timeout, User) {
     var fCtrl = this;
+    User.findAll().then(function () {
+      $scope.$apply();
+    });
 
     $scope.add = function (user) {
       $scope.creating = true;
