--- a/example/index.html
+++ b/example/index.html
@@ -7,9 +7,9 @@
   <link href="./example.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
   <script src="https://cdn.firebase.com/js/client/1.0.21/firebase.js"></script>
-  <script src="https://github.com/js-data/js-data/releases/download/0.4.1/js-data-0.4.1.min.js"></script>
+  <script src="https://github.com/js-data/js-data/releases/download/1.0.0-alpha.1-0/js-data-1.0.0-alpha.1-0.min.js"></script>
   <script
-    src="https://github.com/js-data/js-data-firebase/releases/download/0.4.2/js-data-firebase-0.4.2.min.js"></script>
+    src="https://github.com/js-data/js-data-firebase/releases/download/0.4.3/js-data-firebase-0.4.3.min.js"></script>
   <script src="./example.js"></script>
 </head>
 <body data-ng-controller="firebaseCtrl as fCtrl">
