Fixed link in demo.

--- a/example/index.html
+++ b/example/index.html
@@ -6,7 +6,7 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
   <link href="./example.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
-  <script src="https://cdn.firebase.com/js/client/1.0.21/firebase.js"></script>
+  <script src="https://cdn.firebase.com/js/client/1.1.2/firebase.js"></script>
   <script src="https://github.com/js-data/js-data/releases/download/1.0.0-alpha.1-0/js-data-1.0.0-alpha.1-0.min.js"></script>
   <script
     src="https://github.com/js-data/js-data-firebase/releases/download/0.4.3/js-data-firebase-0.4.3.min.js"></script>
@@ -17,7 +17,7 @@
   <div class="container">
     <nav class="example-nav">
       <a class="example-nav-item" href="http://www.js-data.io">js-data.io</a>
-      <a class="example-nav-item" href="https://github.com/js-data/js-data/wiki/DSFirebaseAdapter">API Documentation</a>
+      <a class="example-nav-item" href="http://www.js-data.io/v0.4.2/docs/dsfirebaseadapter">API Documentation</a>
       <a class="example-nav-item" href="https://github.com/js-data/js-data-firebase">GitHub</a>
       <a class="example-nav-item" href="https://groups.io/org/groupsio/jsdata">Mailing List</a>
       <a class="example-nav-item" href="https://github.com/js-data/js-data-firebase/issues">Issues</a>
