Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 <h2>
 <a name="js-data-firebase" class="anchor" href="#js-data-firebase"><span class="octicon octicon-link"></span></a>js-data-firebase</h2>
 
-<p>Firebase adapter for <a href="http://www.js-data.io/js-data">js-data</a>.</p>
+<p>Firebase adapter for <a href="http://www.js-data.io/">js-data</a>.</p>
 
 <h2>
 <a name="api-documentation" class="anchor" href="#api-documentation"><span class="octicon octicon-link"></span></a>API Documentation</h2>
 
-<p><a href="https://github.com/js-data/js-data/wiki/DSFirebaseAdapter">DSFirebaseAdapter</a></p>
+<p><a href="http://www.js-data.io/docs/dsfirebaseadapter">DSFirebaseAdapter</a></p>
 
 <h2>
 <a name="demo" class="anchor" href="#demo"><span class="octicon octicon-link"></span></a>Demo</h2>
@@ -49,10 +49,12 @@
 <a name="project-status" class="anchor" href="#project-status"><span class="octicon octicon-link"></span></a>Project Status</h2>
 
 <table>
-<thead><tr>
+<thead>
+<tr>
 <th>Branch</th>
 <th>Master</th>
-</tr></thead>
+</tr>
+</thead>
 <tbody>
 <tr>
 <td>Bower</td>
@@ -79,7 +81,9 @@
 <td><a href="https://coveralls.io/r/js-data/js-data-firebase?branch=master"><img src="https://coveralls.io/repos/js-data/js-data-firebase/badge.png?branch=master" alt="Coverage Status"></a></td>
 </tr>
 </tbody>
-</table><h2>
+</table>
+
+<h2>
 <a name="quick-start" class="anchor" href="#quick-start"><span class="octicon octicon-link"></span></a>Quick Start</h2>
 
 <p><code>bower install --save js-data js-data-firebase</code> or <code>npm install --save js-data js-data-firebase</code>.</p>
@@ -115,7 +119,9 @@
 <li>
 <a href="https://github.com/js-data/js-data-firebase">GitHub</a> - View the source code for js-data.</li>
 <li><a href="https://github.com/js-data/js-data-firebase/blob/master/CONTRIBUTING.md">Contributing Guide</a></li>
-</ul><h2>
+</ul>
+
+<h2>
 <a name="contributing" class="anchor" href="#contributing"><span class="octicon octicon-link"></span></a>Contributing</h2>
 
 <p>First, feel free to contact me with questions. <a href="https://groups.io/org/groupsio/jsdata">Mailing List</a>. <a href="https://github.com/js-data/js-data-firebase/issues">Issues</a>.</p>
@@ -130,7 +136,9 @@
 <li>(in another terminal) <code>grunt karma:dev</code> (runs the tests)</li>
 <li>Write your code, including relevant documentation and tests</li>
 <li>Submit a PR and we'll review</li>
-</ol><h2>
+</ol>
+
+<h2>
 <a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h2>
 
 <p>The MIT License (MIT)</p>
