--- a/examples/index.html
+++ b/examples/index.html
@@ -2,15 +2,15 @@
 <html data-ng-app="firebase-example">
 <head lang="en">
   <meta charset="UTF-8">
-  <title></title>
+  <title>js-data-firebase & Angular</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
   <link href="./example.css" rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
-  <script src="https://cdn.firebase.com/js/client/1.1.3/firebase.js"></script>
-  <script src="https://github.com/js-data/js-data/releases/download/1.2.0/js-data.min.js"></script>
-  <script src="https://github.com/js-data/js-data-angular/releases/download/2.1.0/js-data-angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular.min.js"></script>
+  <script src="https://cdn.firebase.com/js/client/2.1.2/firebase.js"></script>
+  <script src="https://github.com/js-data/js-data/releases/download/1.4.0/js-data.min.js"></script>
   <script
-    src="https://github.com/js-data/js-data-firebase/releases/download/1.0.0/js-data-firebase.min.js"></script>
+    src="https://github.com/js-data/js-data-firebase/releases/download/1.0.1/js-data-firebase.min.js"></script>
+  <script src="https://github.com/js-data/js-data-angular/releases/download/2.2.0/js-data-angular.min.js"></script>
   <script src="./example.js"></script>
 </head>
 <body data-ng-controller="firebaseCtrl as fCtrl">
@@ -22,13 +22,13 @@
       <a class="example-nav-item" href="https://github.com/js-data/js-data-firebase">GitHub</a>
       <a class="example-nav-item" href="https://groups.io/org/groupsio/jsdata">Mailing List</a>
       <a class="example-nav-item" href="https://github.com/js-data/js-data-firebase/issues">Issues</a>
-      <a class="example-nav-item active" href="#">Firebase Adapter Demo</a>
+      <a class="example-nav-item active" href="#">js-data-firebase & Angular</a>
     </nav>
   </div>
 </div>
 <div class="container" style="margin-top: 100px">
   <div class="col-sm-6">
-    <h1 class="page-header">js-data firebase example</h1>
+    <h1 class="page-header">js-data-firebase & Angular example</h1>
 
     <div class="panel panel-primary">
       <div class="panel-heading">
@@ -57,23 +57,22 @@
   <div>
 <pre><code>
 angular.module('firebase-example', ['js-data'])
-  .factory('store', function () {
-    var store = new JSData.DS();
-
-    store.registerAdapter('firebase', new DSFirebaseAdapter({
-      basePath: 'https://js-data-firebase.firebaseio.com'
-    }, { default: true });
-
-    return store;
+  .config(function (DSFirebaseAdapterProvider) {
+    DSFirebaseAdapterProvider.defaults.basePath = 'https://js-data-firebase.firebaseio.com';
   })
-  .factory('User', function (store) {
-    return store.defineResource('user');
+  .run(function (DS, DSFirebaseAdapter) {
+    // js-data-angular created a new store automatically and registered it as DS.
+    // The firebase adapter was already registered, but we want to make it the default.
+    DS.registerAdapter('firebase', DSFirebaseAdapter, { default: true });
   })
-  .controller('firebaseCtrl', function ($scope, $timeout, User) {
+  .factory('User', function (DS) {
+    return DS.defineResource('user');
+  })
+  .controller('firebaseCtrl', function ($scope, User) {
     var fCtrl = this;
 
-    User.findAll().then(function (users) {
-      $scope.users = users;
+    User.findAll().then(function () {
+      $scope.users = User.filter();
     });
 
     User.bindAll({}, $scope, 'users');
