--- a/examples/index.html
+++ b/examples/index.html
@@ -4,13 +4,15 @@
   <meta charset="UTF-8">
   <title>js-data-firebase & Angular</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/styles/default.min.css">
   <link href="./example.css" rel="stylesheet">
+  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/highlight.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular.min.js"></script>
   <script src="https://cdn.firebase.com/js/client/2.1.2/firebase.js"></script>
-  <script src="https://github.com/js-data/js-data/releases/download/1.4.0/js-data.min.js"></script>
+  <script src="https://github.com/js-data/js-data/releases/download/1.5.2/js-data.min.js"></script>
   <script
     src="https://github.com/js-data/js-data-firebase/releases/download/1.0.1/js-data-firebase.min.js"></script>
-  <script src="https://github.com/js-data/js-data-angular/releases/download/2.2.0/js-data-angular.min.js"></script>
+  <script src="https://github.com/js-data/js-data-angular/releases/download/2.2.1/js-data-angular.min.js"></script>
   <script src="./example.js"></script>
 </head>
 <body data-ng-controller="firebaseCtrl as fCtrl">
@@ -41,7 +43,7 @@
               Delete
             </button>
           </div>
-          {{ user.id }}: {{ user.name }}
+          {{ user.name }}
         </div>
         <div class="list-group-item">
           <form id="user-form" name="user-form" data-ng-submit="add({ name: fCtrl.name })">
@@ -55,15 +57,23 @@
     </div>
   </div>
   <div>
-<pre><code>
+<pre><code class="javascript">
 angular.module('firebase-example', ['js-data'])
   .config(function (DSFirebaseAdapterProvider) {
-    DSFirebaseAdapterProvider.defaults.basePath = 'https://js-data-firebase.firebaseio.com';
+    var basePath = 'https://js-data-firebase.firebaseio.com';
+    DSFirebaseAdapterProvider.defaults.basePath = basePath;
   })
   .run(function (DS, DSFirebaseAdapter) {
-    // js-data-angular created a new store automatically and registered it as DS.
-    // The firebase adapter was already registered, but we want to make it the default.
-    DS.registerAdapter('firebase', DSFirebaseAdapter, { default: true });
+
+    // js-data-angular created a new store
+    // automatically and registered it as DS.
+    // The firebase adapter was already registered,
+    // but we want to make it the default.
+    DS.registerAdapter(
+      'firebase',
+      DSFirebaseAdapter,
+      { default: true }
+    );
   })
   .factory('User', function (DS) {
     return DS.defineResource('user');
@@ -71,26 +81,31 @@ angular.module('firebase-example', ['js-data'])
   .controller('firebaseCtrl', function ($scope, User) {
     var fCtrl = this;
 
-    User.findAll().then(function () {
-      $scope.users = User.filter();
-    });
+    // Pull the initial list of users
+    // from Firebase
+    User.findAll();
 
+    // Update the list of users on the
+    // scope whenever the collection
+    // changes
     User.bindAll({}, $scope, 'users');
 
     $scope.add = function (user) {
+      // Create a new user in Firebase
       return User.create(user).then(function () {
         fCtrl.name = '';
       });
     };
 
     $scope.remove = function (user) {
+      // Destroy a user from firebase
       return User.destroy(user.id);
     };
   });
 </code></pre>
   </div>
   <div>
-<pre><code data-ng-non-bindable>
+<pre><code data-ng-non-bindable class="html">
 &lt;div class="list-group"&gt;
   &lt;div class="list-group-item" data-ng-repeat="user in users track by user.id"&gt;
     &lt;div class="pull-right"&gt;
@@ -98,7 +113,7 @@ angular.module('firebase-example', ['js-data'])
         Delete
       &lt;/button&gt;
     &lt;/div&gt;
-    {{ user.id }}: {{ user.name }}
+    {{ user.name }}
   &lt;/div&gt;
   &lt;div class="list-group-item"&gt;
     &lt;form id="user-form" name="user-form" data-ng-submit="add({ name: fCtrl.name })"&gt;
