--- a/examples/angular/index.html
+++ b/examples/angular/index.html
@@ -25,12 +25,13 @@
       <a class="example-nav-item" href="https://groups.io/org/groupsio/jsdata">Mailing List</a>
       <a class="example-nav-item" href="https://github.com/js-data/js-data-firebase/issues">Issues</a>
       <a class="example-nav-item active" href="#">js-data-firebase & Angular</a>
+      <a class="example-nav-item" href="../react">js-data-firebase & React</a>
     </nav>
   </div>
 </div>
 <div class="container" style="margin-top: 100px">
-  <div class="col-sm-6">
-    <h1 class="page-header">js-data-firebase & Angular example</h1>
+  <div class="col-sm-5">
+    <h2 class="page-header">js-data-firebase & Angular example</h2>
 
     <div class="panel panel-primary">
       <div class="panel-heading">
