--- a/examples/angular/index.html
+++ b/examples/angular/index.html
@@ -9,10 +9,10 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/highlight.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular.min.js"></script>
   <script src="https://cdn.firebase.com/js/client/2.1.2/firebase.js"></script>
-  <script src="https://github.com/js-data/js-data/releases/download/1.6.3/js-data.min.js"></script>
+  <script src="https://github.com/js-data/js-data/releases/download/2.0.0-rc.1/js-data.min.js"></script>
   <script
-    src="https://github.com/js-data/js-data-firebase/releases/download/1.1.1/js-data-firebase.min.js"></script>
-  <script src="https://github.com/js-data/js-data-angular/releases/download/2.2.3/js-data-angular.min.js"></script>
+    src="https://github.com/js-data/js-data-firebase/releases/download/2.0.0-rc.1/js-data-firebase.min.js"></script>
+  <script src="https://github.com/js-data/js-data-angular/releases/download/2.4.0/js-data-angular.min.js"></script>
   <script src="./example.js"></script>
 </head>
 <body data-ng-controller="firebaseCtrl as fCtrl">
@@ -64,7 +64,7 @@ angular.module('firebase-example', ['js-data'])
     var basePath = 'https://js-data-firebase.firebaseio.com';
     DSFirebaseAdapterProvider.defaults.basePath = basePath;
   })
-  .run(function (DS, DSFirebaseAdapter) {
+  .run(function (DS, DSFirebaseAdapter, User) {
 
     // js-data-angular created a new store
     // automatically and registered it as DS.
@@ -75,6 +75,29 @@ angular.module('firebase-example', ['js-data'])
       DSFirebaseAdapter,
       { default: true }
     );
+
+    // Activate a mostly auto-sync with Firebase
+    // The only thing missing is auto-sync TO Firebase
+    // This will be easier with js-data 2.x, but right
+    // now you still have to do DS.update('user', 1, { foo: 'bar' }), etc.
+    angular.forEach(DS.definitions, function (Resource) {
+      var ref = DSFirebaseAdapter.ref.child(Resource.endpoint);
+      // Inject items into the store when they're added to Firebase
+      // Update items in the store when they're modified in Firebase
+      ref.on('child_changed', function (dataSnapshot) {
+        var data = dataSnapshot.val();
+        if (data[Resource.idAttribute]) {
+          Resource.inject(data);
+        }
+      });
+      // Eject items from the store when they're removed from Firebase
+      ref.on('child_removed', function (dataSnapshot) {
+        var data = dataSnapshot.val();
+        if (data[Resource.idAttribute]) {
+          Resource.eject(data[Resource.idAttribute]);
+        }
+      });
+    });
   })
   .factory('User', function (DS) {
     return DS.defineResource('user');
