--- a/examples/react/index.html
+++ b/examples/react/index.html
@@ -11,7 +11,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.12.2/JSXTransformer.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.12.2/react.js"></script>
   <script src="https://github.com/js-data/js-data/releases/download/2.0.0-rc.1/js-data.min.js"></script>
-  <script src="https://github.com/js-data/js-firebase/releases/download/2.0.0-rc.1/js-firebase.min.js"></script>
+  <script src="https://github.com/js-data/js-data-firebase/releases/download/2.0.0-rc.1/js-data-firebase.min.js"></script>
   <script type="text/jsx" src="./example.js"></script>
 </head>
 <body>
