Add riotjs example.

--- a/examples/react/index.html
+++ b/examples/react/index.html
@@ -25,6 +25,7 @@
       <a class="example-nav-item" href="https://github.com/js-data/js-data-firebase/issues">Issues</a>
       <a class="example-nav-item" href="../angular">js-data-firebase & Angular</a>
       <a class="example-nav-item active" href="#">js-data-firebase & React</a>
+      <a class="example-nav-item" href="../riot">js-data-firebase & Riot</a>
     </nav>
   </div>
 </div>
