--- a/examples/angular/index.html
+++ b/examples/angular/index.html
@@ -26,6 +26,7 @@
       <a class="example-nav-item" href="https://github.com/js-data/js-data-firebase/issues">Issues</a>
       <a class="example-nav-item active" href="#">js-data-firebase & Angular</a>
       <a class="example-nav-item" href="../react">js-data-firebase & React</a>
+      <a class="example-nav-item" href="../riot">js-data-firebase & Riot</a>
     </nav>
   </div>
 </div>
