--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 <p><a href="http://api.js-data.io">Back to api.js-data.io</a>.</p>
 
 <ul>
-<li><a href="http://api.js-data.io/js-data-localstorage/3.0.0-beta.1/index.html">3.0.0-beta.1 (latest)</a></li>
+<li><a href="http://api.js-data.io/js-data-localstorage/3.0.0-beta.2/index.html">3.0.0-beta.2 (latest)</a></li>
+<li><a href="http://api.js-data.io/js-data-localstorage/3.0.0-beta.1/index.html">3.0.0-beta.1</a></li>
 <li><a href="http://js-data.io/v2.8/docs/home">2.x</a></li>
 </ul>
       </section>
